# md

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  GLM_SETUP.md  MANUAL_TESTING.md  MARKETDATA_REFERENCE.md  Makefile  README.md  SECURITY.md  alembic.ini  login-page.md  pyproject.toml  requirements-dev.txt
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: BRANCH_PROTECTION_GITHUB_UI.md  BRANCH_PROTECTION_SETUP.md  CODECOV_SETUP.md  QUICK_START_SETUP.md  rollback_intraday.md
docs/features/: realtime-watchlist.md
docs/linear/templates/: bug-report.md  enhancement.md  new-issue.md
docs/superpowers/plans/: 2026-04-05-market-data-infrastructure-implementation.md  2026-04-08-foundation-implementation.md  2026-04-12-pr15-review-fixes.md  2026-04-12-watchlists-implementation.md  2026-04-13-scanner-control-panel-implementation.md  2026-04-14-scheduler-ui-implementation.md  2026-04-16-watchlist-redesign-implementation.md  2026-04-19-charts-implementation.md  2026-04-19-options-agent-slices-0-4.md  2026-04-19-options-agent-slices-5-9.md  2026-04-22-realtime-watchlist-charts.md  2026-04-23-intraday-data-updates.md  2026-04-23-watchlist-symbol-row-implementation.md  2026-04-27-corporate-action-fix.md  2026-04-27-six-month-high-scanner.md  2026-04-27-smart-money-fvg-mss-scanner.md  2026-04-27-watchlist-panel-improvements.md  2026-04-28-weekly-options-scanner.md  2026-05-01-pullback-continuation-scanner.md  (+1 more)
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.tsx  index.css  main.tsx  test-setup.ts
frontend/tests/: setup.ts
src/: __init__.py  config.py  main.py
src/api/: __init__.py  auth.py  deps.py  main.py  schemas.py  ws.py
src/data_fetcher/: __init__.py  fetcher.py  scheduler.py
src/data_provider/: __init__.py  base.py  batch.py  batch_candles.py  bulk_candles_by_day.py  exceptions.py  marketdata_app.py  validation.py
src/db/: __init__.py  connection.py  models.py
src/options_agent/: __init__.py  cli.py  config.py  ivr.py
src/output/: __init__.py  base.py  cli.py  composite.py  logger.py
src/realtime_monitor/: __init__.py  alert_engine.py  monitor.py  rules.py
src/scanner/: __init__.py  base.py  context.py  executor.py  pre_close_executor.py  registry.py  registry_factory.py
src/utils/: __init__.py  market_hours.py
src/workers/: __init__.py  quote_worker.py
systemd/: README.md  install.sh  market-data-analyze.service  market-data-fetch.service  market-data-scan.service
tests/: __init__.py  conftest.py  test_example.py
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: __init__.py  test_ema_pullback_rs_integration.py  test_end_to_end.py  test_fetcher_db.py  test_realtime_flow.py  test_scanner_result_run_type.py  test_smart_money_e2e.py  test_watchlist_eod.py
tests/options_agent/: __init__.py  conftest.py
tests/unit/: __init__.py  test_alert_rules.py  test_bb_width_percentile.py  test_config.py  test_data_provider_base.py  test_data_provider_validation.py  test_db_connection.py  test_db_models.py  test_ema_pullback_rs_scanner.py  test_fetcher_unit.py  test_fractal_swings.py  test_fvg_indicator.py  test_indicator_cache.py  test_indicators.py  test_main.py  test_marketdata_provider.py  test_output_handlers.py  test_pullback_continuation_scanner.py  test_relative_strength.py  test_rolling_max_indicator.py  test_rsi_divergence.py  test_scanner_implementations.py  test_scanners.py  test_scheduler.py  test_six_month_high_scanner.py  test_smart_money_scanner.py  test_stocks_schemas.py  test_stocks_service.py  test_swing_points.py  test_watchlist_models.py  test_weekly_options_scanner.py
(+235 files in other folders)
