[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "0.1.0"
description = "Hybrid market data infrastructure for 500-stock universe"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "testcontainers[postgres]>=3.7.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
