[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "0.1.0"
description = "Hybrid market data infrastructure for 500-stock universe"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "requests>=2.33.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "apscheduler>=3.11.2",
    "python-dotenv>=1.2.2",
    "click>=8.3.2",
    "pytz>=2026.1.post1",
    "python-dateutil>=2.9.0.post0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "testcontainers[postgres]>=4.14.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
