[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data"
version = "0.1.0"
description = "Hybrid market data infrastructure for 500-stock universe"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.0",
    "scipy>=1.12.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "testcontainers[postgres]>=3.7.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "freezegun>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
